Interfaz BPMercado 1ra version

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -131,13 +131,13 @@
         </div>
 
         <nav class="sidebar-nav">
-            <a href="/dashboard/formulario"
-               class="nav-item {% if current_page == 'formulario' %}active{% endif %}">
-                Formulario
+            <a href="/dashboard/consultar-datos"
+               class="nav-item {% if current_page == 'consultar-datos' %}active{% endif %}">
+                Consultar Datos
             </a>
-            <a href="/dashboard/preguntas"
-               class="nav-item {% if current_page == 'preguntas' %}active{% endif %}">
-                Preguntas Inteligentes
+            <a href="/dashboard/modificar-datos"
+               class="nav-item {% if current_page == 'modificar-datos' %}active{% endif %}">
+                Modificar Datos
             </a>
         </nav>
 
@@ -148,7 +148,7 @@
 
     <!-- TOP BAR -->
     <div class="topbar">
-        <h1>Bosio Solutions</h1>
+        <h1>BPMercado Admin</h1>
         <div class="topbar-user">
             {{ session.user_email }}
         </div>
