--- a/templates/login.html
+++ b/templates/login.html
@@ -137,7 +137,7 @@
             </svg>
         </div>
 
-        <button type="submit">Sign In</button>
+        <button type="submit">Iniciar</button>
     </form>
 
     {% if message %}
@@ -147,7 +147,7 @@
     {% endif %}
 
     <div class="register-link">
-        Don't have an account? <a href="/register">Create one</a>
+        No tienes cuenta? <a href="/register">Crear una</a>
     </div>
 </div>
 
